--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Titanic-competition/titanic/gender_submission.csv
 Titanic-competition/titanic/test.csv
 Titanic-competition/titanic/train.csv
 Titanic-competition/titanic.zip
+Titanic-competition/vir-env
+*.pkl
