--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Titanic-competition/titanic/train.csv
 Titanic-competition/titanic.zip
 Titanic-competition/vir-env
 *.pkl
+.gradient/settings.yaml
+Titanic-competition/.ipynb_checkpoints/2022-08-29-auto-pytorch-titanic-checkpoint.ipynb
+Titanic-competition/.ipynb_checkpoints/requirements-apt-checkpoint.txt
+Titanic-competition/.ipynb_checkpoints/requirements-checkpoint.txt
