ignore Kaggle credentials

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Titanic-competition/vir-env
 Titanic-competition/.ipynb_checkpoints/2022-08-29-auto-pytorch-titanic-checkpoint.ipynb
 Titanic-competition/.ipynb_checkpoints/requirements-apt-checkpoint.txt
 Titanic-competition/.ipynb_checkpoints/requirements-checkpoint.txt
+Titanic-competition/kaggle.json
