ignore .last_checked

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Titanic-competition/.ipynb_checkpoints/2022-08-29-auto-pytorch-titanic-checkpoin
 Titanic-competition/.ipynb_checkpoints/requirements-apt-checkpoint.txt
 Titanic-competition/.ipynb_checkpoints/requirements-checkpoint.txt
 Titanic-competition/kaggle.json
+.last_checked
