ignore catboost related files

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Titanic-competition/.ipynb_checkpoints/requirements-apt-checkpoint.txt
 Titanic-competition/.ipynb_checkpoints/requirements-checkpoint.txt
 Titanic-competition/kaggle.json
 .last_checked
+Titanic-competition/catboost_info/
