--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@ Titanic-competition/titanic.zip
 Titanic-competition/vir-env
 *.pkl
 .gradient/settings.yaml
-Titanic-competition/.ipynb_checkpoints/2022-08-29-auto-pytorch-titanic-checkpoint.ipynb
-Titanic-competition/.ipynb_checkpoints/requirements-apt-checkpoint.txt
-Titanic-competition/.ipynb_checkpoints/requirements-checkpoint.txt
 Titanic-competition/kaggle.json
 .last_checked
 Titanic-competition/catboost_info/
+*checkpoint.ipynb
+*checkpoint.txt
