ignore wandb api key

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Titanic-competition/kaggle.json
 Titanic-competition/catboost_info/
 *checkpoint.ipynb
 *checkpoint.txt
+Titanic-competition/wandb.txt
